--- a/WPF_Task_1_2/MainWindow.xaml
+++ b/WPF_Task_1_2/MainWindow.xaml
@@ -5,8 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF_Task_1_2"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="200">
     <Grid>
+        <Button Name="myButton" Content="Next" HorizontalAlignment="Center" Margin="0,383,0,0" VerticalAlignment="Center" Width="59" FontSize="15" FontWeight="Bold" Click="myButton_Click"/>
+        <Ellipse Name="red" HorizontalAlignment="Center" Height="100" Margin="0,26,0,0" Stroke="Black" VerticalAlignment="Top" Width="100" Fill="Red"/>
+        <Ellipse Name="yellow" HorizontalAlignment="Center" Height="100" Margin="0,148,0,0" Stroke="Black" VerticalAlignment="Top" Width="100" Fill="Gray"/>
+        <Ellipse Name="green" HorizontalAlignment="Center" Height="100" Margin="0,274,0,0" Stroke="Black" VerticalAlignment="Top" Width="100" Fill="Gray"/>
 
     </Grid>
 </Window>
