--- a/WPF_Task_3_1/MainWindow.xaml
+++ b/WPF_Task_3_1/MainWindow.xaml
@@ -19,20 +19,21 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Label Margin="5,10,0,0" Content="Имя студента:"/>
-        <TextBox Margin="10,10,10,0"
+        <TextBox Name="NameStudentTextBox"
+                 Margin="10,10,10,0"
                  Grid.Row="1" 
                  BorderBrush="Gray" 
                  Height="Auto" 
-                 Text="Sterling Archer" VerticalAlignment="Top"
+                 Text="Введите имя" VerticalAlignment="Top"
                  />
         <Label Grid.Row="2" Margin="5,10,0,0" Content="Факультет:"/>
-        <ComboBox Grid.Row="3" Margin="10,10,10,0" Height="25" VerticalAlignment="Top">
+        <ComboBox Name="FacultyComboBox" Grid.Row="3" Margin="10,10,10,0" Height="25" VerticalAlignment="Top">
             <ComboBoxItem>Программирование</ComboBoxItem>
             <ComboBoxItem>Дизайн</ComboBoxItem>
             <ComboBoxItem>Менеджмент</ComboBoxItem>            
         </ComboBox>
         <Label Margin="5,10,0,0" Grid.Row="4" Content="Доступные курсы:"/>
-        <ListBox Grid.Row="5" Margin="10,10,10,0" Height="Auto" VerticalAlignment="Top">
+        <ListBox Name="AvailableCoursesListBox" Grid.Row="5" Margin="10,10,10,0" Height="Auto" VerticalAlignment="Top">
             <ListBoxItem>WPF</ListBoxItem>
             <ListBoxItem>C#</ListBoxItem>
             <ListBoxItem>Python</ListBoxItem>
