--- a/WPF_Task_3_1/MainWindow.xaml
+++ b/WPF_Task_3_1/MainWindow.xaml
@@ -26,7 +26,7 @@
                  Height="Auto" 
                  Text="Введите имя" VerticalAlignment="Top"
                  />
-        <Label Grid.Row="2" Margin="5,10,0,0" Content="Факультет:"/>
+        <Label Grid.Row="2" Margin="5,10,0,0" Content="Факультет:" />
         <ComboBox Name="FacultyComboBox" Grid.Row="3" Margin="10,10,10,0" Height="25" VerticalAlignment="Top">
             <ComboBoxItem>Программирование</ComboBoxItem>
             <ComboBoxItem>Дизайн</ComboBoxItem>
@@ -41,7 +41,7 @@
             <ListBoxItem>NoCode</ListBoxItem>
         </ListBox>
         
-        <CheckBox Name="Apply" Grid.Row="6" VerticalAlignment="Bottom" Checked="Apply_Checked"  >
+        <CheckBox Margin="10" Name="Apply" Grid.Row="6" VerticalAlignment="Bottom" Checked="Apply_Checked"  >
             Я согласен получать рассылку
         </CheckBox>
         <Button Margin="0,0,0,10" Grid.Row="7" Content="Записаться" Height="25" Width="250" HorizontalAlignment="Center" Click="Button_Click">
