--- a/WPF_test_toggle button/MainWindow.xaml
+++ b/WPF_test_toggle button/MainWindow.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="WPF_Task_4_1.MainWindow"
+﻿<Window x:Class="WPF_test_toggle_button.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPF_Task_4_1"
+        xmlns:local="clr-namespace:WPF_test_toggle_button"
         mc:Ignorable="d"
-        Title="Кнопка с переключением" Height="500" Width="700">
+        Title="MainWindow" Height="450" Width="800">
     <StackPanel VerticalAlignment="Center">
-        <local:ToggleButton Width="150" Height="75" FontSize="16"/>
+        <local:ToggleButton Height="50" Width="100"/>
     </StackPanel>
 </Window>
