--- a/TTest/App.xaml
+++ b/TTest/App.xaml
@@ -1,9 +1,9 @@
-﻿<Application x:Class="WPF_Task_5_1.App"
+﻿<Application x:Class="TTest.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WPF_Task_5_1"
+             xmlns:local="clr-namespace:TTest"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        
+         
     </Application.Resources>
 </Application>
