--- a/WPF_Task_5_1/Styles.xaml
+++ b/WPF_Task_5_1/Styles.xaml
@@ -1,10 +1,27 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib">
-    <SolidColorBrush x:Key="PrimariColor" Color="Violet"/>
-    <SolidColorBrush x:Key="HoverColor" Color="Aquamarine"/>
+    <SolidColorBrush x:Key="PrimaryColor" Color="PowderBlue"/>
+    <SolidColorBrush x:Key="HoverColor" Color="Red"/>
     <SolidColorBrush x:Key="DisbledColor" Color="Wheat"/>
-    <sys:Double x:Key="ControlHeight">50</sys:Double>
+    <sys:Double x:Key="ControlHeight">40</sys:Double>
     <sys:Double x:Key="ControlWidth">120</sys:Double>
+
+    <Style x:Key="HeaderTextStyle" TargetType="TextBlock">
+        <Setter Property="FontSize" Value="18"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="Margin" Value="0,0,0,10"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+    </Style>
+
+
+    <Style x:Key="BaseButtonStyle">
+        <Setter Property="Button.Height" Value="{StaticResource ControlHeight}"/>
+        <Setter Property="Button.Width" Value="{StaticResource ControlWidth}"/>
+        <Setter Property="Button.Margin" Value="5"/>
+        <Setter Property="Button.Background" Value="{DynamicResource PrimaryColor}"/>
+        <Setter Property="Button.Foreground" Value="White"/>
+        <Setter Property="Button.BorderBrush" Value="Green"/>
+    </Style>   
 
 </ResourceDictionary>
