--- a/WPF_Task_5_1/App.xaml
+++ b/WPF_Task_5_1/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:WPF_Task_5_1"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Styles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>        
     </Application.Resources>
 </Application>
