--- a/WPF_Task_5_1/MainWindow.xaml
+++ b/WPF_Task_5_1/MainWindow.xaml
@@ -9,20 +9,26 @@
         Title="Панель настроек" Height="250" Width="250">
 
     <Window.Resources>
-        <Style TargetType="Button">
-            <Style.Setters>
-                <Setter Property="Background" Value="Red"/>
-            </Style.Setters>
-            
+        <Style TargetType="TextBlock" x:Name="TitleStyle" BasedOn="{StaticResource HeaderTextStyle}"/>
+        <Style TargetType="Button" x:Name="InteractiveButtonStyle" BasedOn="{StaticResource BaseButtonStyle}">        
             <Style.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="Green"/>
-                    <Setter Property="BorderBrush" Value="Green"/>
-                    <Setter Property="Margin" Value="3"/>
-                    <Setter Property="FontSize" Value="20"/>
+                    <Setter Property="Foreground" Value="{StaticResource HoverColor}"/>
+                    <Setter Property="Margin" Value="10"/>
                 </Trigger>
-            </Style.Triggers>                        
-        </Style>        
+                <Trigger Property="IsPressed" Value="True">
+                    <Setter Property="FontWeight" Value="Bold"/>
+                </Trigger>
+                <Trigger Property="IsEnabled" Value="False">
+                    <Setter Property="Foreground" Value="{StaticResource DisbledColor}"/>
+                </Trigger>
+                <MultiTrigger>
+                    <MultiTrigger.Conditions>
+                        
+                    </MultiTrigger.Conditions>
+                </MultiTrigger>
+            </Style.Triggers>
+        </Style>
     </Window.Resources>
 
 
@@ -32,6 +38,6 @@
         <Button Content="Сохранить"/>
         <Button Content="Отменить"/>
         <Button Content="Специальная кнопка"/>
-        <CheckBox Content="Включить режим" HorizontalAlignment="Center"/>
+        <CheckBox x:Name="ToggleButton" Content="Включить режим" HorizontalAlignment="Center"/>
     </StackPanel>
 </Window>
