--- a/WPF_Task_5_1/Styles.xaml
+++ b/WPF_Task_5_1/Styles.xaml
@@ -1,9 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib">
-    <SolidColorBrush x:Key="PrimaryColor" Color="PowderBlue"/>
+    <SolidColorBrush x:Key="PrimaryColor" Color="Yellow"/>
     <SolidColorBrush x:Key="HoverColor" Color="Red"/>
     <SolidColorBrush x:Key="DisbledColor" Color="Wheat"/>
+    <SolidColorBrush x:Key="PrimaryForegroundColor" Color="Blue"/>
     <sys:Double x:Key="ControlHeight">40</sys:Double>
     <sys:Double x:Key="ControlWidth">120</sys:Double>
 
@@ -15,13 +16,15 @@
     </Style>
 
 
-    <Style x:Key="BaseButtonStyle">
-        <Setter Property="Button.Height" Value="{StaticResource ControlHeight}"/>
-        <Setter Property="Button.Width" Value="{StaticResource ControlWidth}"/>
-        <Setter Property="Button.Margin" Value="5"/>
-        <Setter Property="Button.Background" Value="{DynamicResource PrimaryColor}"/>
-        <Setter Property="Button.Foreground" Value="White"/>
-        <Setter Property="Button.BorderBrush" Value="Green"/>
-    </Style>   
+    <Style x:Key="BaseButtonStyle" TargetType="Button">
+        <Setter Property="Height" Value="{StaticResource ControlHeight}"/>
+        <Setter Property="Width" Value="{StaticResource ControlWidth}"/>
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="Background" Value="{DynamicResource PrimaryColor}"/>
+        <Setter Property="Foreground" Value="{DynamicResource PrimaryForegroundColor}"/>
+        <Setter Property="BorderBrush" Value="Green"/>
+    </Style>
+
+    
 
 </ResourceDictionary>
