--- a/TTest/MainWindow.xaml
+++ b/TTest/MainWindow.xaml
@@ -1,38 +1,72 @@
 ﻿<Window x:Class="WpfApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Test" Height="300" Width="300">
+        Title="Кастомные CheckBox (в стиле)" Height="300" Width="400">
 
     <Window.Resources>
-        <Style TargetType="Button">
-            <Setter Property="Background" Value="Red"/>
-            <Setter Property="Foreground" Value="White"/>
-            <Setter Property="Margin" Value="10"/>
-            <Setter Property="Height" Value="40"/>
+        <!-- Кастомный ControlTemplate -->
+        <ControlTemplate x:Key="CustomCheckBoxTemplate" TargetType="CheckBox">
+            <Grid x:Name="RootGrid" Margin="5">
+                <!-- Прямоугольник -->
+                <Rectangle x:Name="BorderRect"
+                           Width="20"
+                           Height="20"
+                           RadiusX="3" RadiusY="3"
+                           Stroke="Black" StrokeThickness="1" Fill="White"/>
 
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Border Background="{TemplateBinding Background}"
-                                BorderBrush="Black" BorderThickness="1"
-                                CornerRadius="4">
-                            <ContentPresenter HorizontalAlignment="Center"
-                                              VerticalAlignment="Center"/>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
+                <!-- Буква "X" -->
+                <TextBlock x:Name="CheckMarkX"
+                           Text="X"
+                           FontSize="14"
+                           FontWeight="Bold"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center"
+                           Opacity="0"/>
 
-            <Style.Triggers>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="Green"/>
+                <!-- Круг (Indeterminate) -->
+                <Ellipse x:Name="IndeterminateEllipse"
+                         Width="10" Height="10"
+                         Fill="Black"
+                         HorizontalAlignment="Center"
+                         VerticalAlignment="Center"
+                         Opacity="0"/>
+
+                <!-- Подпись -->
+                <ContentPresenter x:Name="ContentHost"
+                                  Margin="25,0,0,0"
+                                  VerticalAlignment="Center"/>
+            </Grid>
+
+            <ControlTemplate.Triggers>
+                <Trigger Property="IsChecked" Value="True">
+                    <Setter TargetName="CheckMarkX" Property="Opacity" Value="1"/>
                 </Trigger>
-            </Style.Triggers>
+                <Trigger Property="IsChecked" Value="{x:Null}">
+                    <Setter TargetName="IndeterminateEllipse" Property="Opacity" Value="1"/>
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
+
+        <!-- Стиль с ключом -->
+        <Style TargetType="CheckBox">
+            <Setter Property="Template" Value="{StaticResource CustomCheckBoxTemplate}"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
         </Style>
     </Window.Resources>
 
+    <!-- Использование: указываем Style -->
     <StackPanel Margin="20">
-        <Button Content="Наведи на меня"/>
-        <Button Content="И на меня"/>
+        <CheckBox 
+                  Content="Не отмечен (Unchecked)"
+                  IsChecked="False"/>
+
+        <CheckBox 
+                  Content="Отмечен (Checked)"
+                  IsChecked="True"/>
+
+        <CheckBox 
+                  Content="Неопределённое состояние"
+                  IsChecked="{x:Null}"
+                  IsThreeState="True"/>
     </StackPanel>
 </Window>
